--- a/RAL2017/package.xml
+++ b/RAL2017/package.xml
@@ -12,7 +12,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>farnn</run_depend>
-  <run_depend>ensenso</run_depend>
+<!--  <run_depend>ensenso</run_depend>-->
   <run_depend>nn_controller</run_depend>
 
   <export>
