updated ral files

--- a/nn_controller/CMakeLists.txt
+++ b/nn_controller/CMakeLists.txt
@@ -28,6 +28,7 @@ add_message_files(
  add_service_files(
    FILES
    amfcError.srv
+   controller.srv
  )
 
 ## Generate actions in the 'action' folder
