--- a/nn_controller/package.xml
+++ b/nn_controller/package.xml
@@ -14,6 +14,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>ensenso</build_depend>
+  <!-- <build_depend>libpathfinder</build_depend> -->
   <build_depend>message_generation</build_depend>
 
   <run_depend>message_runtime</run_depend>
@@ -23,7 +24,7 @@
   <run_depend>ensenso</run_depend>
   <run_depend>std_msgs</run_depend>
 
-
+  <!-- <exec_depend>libpathfinder</exec_depend> -->
   <export>
 
   </export>
