--- a/nn_controller/package.xml
+++ b/nn_controller/package.xml
@@ -14,7 +14,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>ensenso</build_depend>
-  <!-- <build_depend>libpathfinder</build_depend> -->
+  <build_depend>boostsender</build_depend>
   <build_depend>message_generation</build_depend>
 
   <run_depend>message_runtime</run_depend>
@@ -23,6 +23,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>ensenso</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>boostsender</run_depend>
 
   <!-- <exec_depend>libpathfinder</exec_depend> -->
   <export>
