predictor up till loss

--- a/nn_controller/CMakeLists.txt
+++ b/nn_controller/CMakeLists.txt
@@ -31,6 +31,7 @@ add_message_files(
    FILES
    amfcError.srv
    controller.srv
+   predictor_params.srv
  )
 
 ## Generate actions in the 'action' folder
