--- a/nn_controller/CMakeLists.txt
+++ b/nn_controller/CMakeLists.txt
@@ -7,6 +7,10 @@ include_directories( ${EIGEN3_INCLUDE_DIRS} )
 
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(Caffe_DIR                     $ENV{CAFFE_ROOT})
+
+OPTION(USE_CAFFE "Enable Caffe support" ON)
+OPTION(USE_CAFFE_GPU "Enable Caffe GPU support" ON)
 
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
@@ -15,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   ensenso
+  Caffe
 )
 
 find_package(Boost COMPONENTS filesystem system serialization
@@ -64,7 +69,7 @@ add_message_files(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs ensenso message_runtime roscpp 
+  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs ensenso message_runtime 
   DEPENDS Boost
   LIBRARIES pathfinder
 )
@@ -72,6 +77,33 @@ catkin_package(
 ###########
 ## Build ##
 ###########
+
+# Include Caffe
+if (USE_CAFFE)
+    # add definitions for the C++ code
+    add_definitions(-DUSE_CAFFE)
+    if (USE_CAFFE_GPU)
+        add_definitions(-DCAFFE_GPU)
+        find_package(CUDA 7.0 REQUIRED)
+        include_directories(${CUDA_INCLUDE_DIRS})
+    else (USE_CAFFE_GPU)
+        add_definitions(-DCPU_ONLY)
+    endif (USE_CAFFE_GPU)
+    # add paths to CAFFE
+    link_directories(${CAFFE_LIBRARY_PATH})  # Should be set to /path/to/caffe/build/lib
+    include_directories(${CAFFE_INCLUDE_PATH})  # Should be set to /path/to/caffe/distribute/include
+    # extra header paths
+    include_directories(${CAFFE_EXTRA_PATH})
+    # add neural network to DDP controller files
+    #set(DDP_FILES ${DDP_FILES} src/neuralnetworkcaffe.cpp src/caffenncontroller.cpp)
+    # compile Caffe test
+    #rosbuild_add_executable(caffe_test src/caffe_test.cpp src/neural_network_caffe.cpp)
+    #target_link_libraries(caffe_test caffe protobuf)
+
+    # compile image processor node
+    #rosbuild_add_executable(caffe_img_processor src/img_processor.cpp src/neural_network_caffe.cpp)
+    #target_link_libraries(caffe_img_processor caffe protobuf)
+endif (USE_CAFFE)
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
@@ -103,6 +135,10 @@ add_dependencies(nn_controller ${catkin_EXPORTED_TARGETS})
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(nn_controller_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+if (USE_CAFFE)
+    target_link_libraries(nn_controller caffe protobuf)
+endif (USE_CAFFE)
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(nn_controller
