implemented optimal rotation from eigenvectors (icp); fix antisymmetry

--- a/RAL2017/package.xml
+++ b/RAL2017/package.xml
@@ -14,6 +14,7 @@
   <run_depend>farnn</run_depend>
   <!-- <run_depend>scripts</run_depend> -->
   <run_depend>nn_controller</run_depend>
+  <run_depend>vicon_icp</run_depend>
 
   <export>
     <metapackage/>
