failing to see new ros msg

--- a/nn_controller/package.xml
+++ b/nn_controller/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The nn_controller package</description>
 
-  <maintainer email="ogunmolu@amazon.com">Lekan Ogunmolu</maintainer>
+  <maintainer email="patlekano@gmail.com">Lekan Ogunmolu</maintainer>
 
   <license>BSD</license>
 
