changed last layer to softmax

--- a/vicon_icp/config/base_pose.yaml
+++ b/vicon_icp/config/base_pose.yaml
@@ -1,20 +1,21 @@
 BasePose:
     Marker_Fore:
-       x: 8.22181129456
-       y: -735.928527832
-       z: 261.825561523
+      x: 1690.40979004
+      y: -1074.63745117
+      z: 807.370422363
     Marker_Left:
-       x: 75.9278945923
-       y: -623.622009277
-       z: 225.049331665
+      x: 1739.50769043
+      y: -1143.31872559
+      z: 776.4140625
     Marker_Right:
-       x: -35.7075538635
-       y: -626.865966797
-       z: 230.591751099
+      x: 1625.80566406
+      y: -1137.63464355
+      z: 798.475830078
     Marker_Chin:
-       x: 19.7771053314
-       y: -555.723022461
-       z: 243.739318848
+      x: 1684.34277344
+      y: -1264.57739258
+      z: 810.636779785
 Utils:
   save: false
   print: false
+  use_hard_coded: false
