--- a/vicon_icp/CMakeLists.txt
+++ b/vicon_icp/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   ensenso
+  roslib
   tf_conversions
   vicon_bridge
   roslaunch 
@@ -163,6 +164,6 @@ add_executable(pose_sub src/pose_sub.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}  ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}  ${catkin_LIBRARIES} -lm -ldl)
 target_link_libraries(direction_cosines  ${catkin_LIBRARIES})
 target_link_libraries(pose_sub  ${catkin_LIBRARIES} -lm -ldl)
