--- a/vicon_icp/package.xml
+++ b/vicon_icp/package.xml
@@ -18,6 +18,7 @@
   <build_depend>tf_conversions</build_depend>
   <build_depend>vicon_bridge</build_depend>
   <build_depend>ensenso</build_depend>
+  <build_depend>roslib</build_depend>
 
   <run_depend>cmake_modules</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
@@ -28,6 +29,7 @@
   <run_depend>tf_conversions</run_depend>
   <run_depend>vicon_bridge</run_depend>
   <run_depend>ensenso</run_depend>
+  <run_depend>roslib</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
