--- a/vicon_icp/config/base_pose.yaml
+++ b/vicon_icp/config/base_pose.yaml
@@ -1,21 +1,21 @@
 BasePose:
     Marker_Fore:
-      x: 1690.40979004
-      y: -1074.63745117
-      z: 807.370422363
+      x: -116.522354126
+      y: 887.87701416
+      z: 267.221984863
     Marker_Left:
-      x: 1739.50769043
-      y: -1143.31872559
-      z: 776.4140625
+      x: -83.0885162354
+      y: 767.975891113
+      z: 245.588592529
     Marker_Right:
-      x: 1625.80566406
-      y: -1137.63464355
-      z: 798.475830078
+      x: -187.113891602
+      y: 800.505126953
+      z: 252.172180176
     Marker_Chin:
-      x: 1684.34277344
-      y: -1264.57739258
-      z: 810.636779785
+      x: -154.714294434
+      y: 702.004333496
+      z: 267.660247803
 Utils:
   save: false
   print: false
-  use_hard_coded: false
+  use_hard_coded: true
