fix neural net issues

--- a/vicon_icp/config/base_pose.yaml
+++ b/vicon_icp/config/base_pose.yaml
@@ -1,26 +1,21 @@
 BasePose:
     Marker_Fore:
-      x: -157.295013428
-      y: 878.175598145
-      z: 278.13848877
-
-    Marker_Left:
-      x: -124.74546814
-      y: 741.793762207
-      z: 243.224243164
-
+      x: 1074.22851562
+      y: 8.19184875488
+      z: 968.517456055
     Marker_Right:
-      x: -223.983856201
-      y: 793.660705566
-      z: 242.81817627
-
+      x: 1022.63433838
+      y: 107.457176208
+      z: 948.422851562
     Marker_Chin:
-      x: -191.52003479
-      y: 693.402160645
-      z: 250.071655273
-
+      x: 1063.6862793
+      y: 195.816772461
+      z: 944.158203125
+    Marker_Left:
+      x: 1110.6998291
+      y: 107.423690796
+      z: 935.233947754
 Utils:
   save: false
   print: false
-  use_hard_coded: false
-
+  use_hard_coded: true
